# rtspplayer

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  main.cpp  qml.qrc
example/qml/: CameraView.qml  main.qml
src/: CMakeLists.txt  FrameGrabber.cpp  FrameGrabber.h  GstFrameGrabber.cpp  GstFrameGrabber.h  VideoSurface.cpp  VideoSurface.h  VideoSurfaceGL.cpp  VideoSurfaceGL.h  main.cpp  qml.qrc
src/qml/: CameraView.qml  main.qml
test/: CMakeLists.txt  test_rtspplayer.cpp
